# core

./: .gitignore  Cargo.toml  README.md  Taskfile.yaml  link_to_ext  nginx.conf  nginx.nocert.conf  oh-my-openagent.json  pyproject.toml  zzz.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-play.yml  build-poller.yml  build-web.yml  lint-helm.yml  test-play.yml  test-web.yml  update-helm-image-tags.yml
.opencode/: context-map.md  oh-my-openagent.jsonc
.opencode/skills/backend-logic/: SKILL.md
.opencode/skills/infra-helm/: SKILL.md
.opencode/skills/monorepo-arch/: SKILL.md
.opencode/skills/py-web-design/: SKILL.md
apps/bash-poller/: Dockerfile  README.md  Taskfile.yaml
apps/bash-poller/helm-chart/: Chart.yaml  values.yaml
apps/py-play/: Dockerfile  README.md  Taskfile.yaml  dockerfile  pyproject.toml
apps/py-play/helm-chart/: Chart.yaml  values-test.yaml  values.yaml
apps/py-play/helm-chart/templates/: cronjob.yaml  deployment.yaml  ingress.yaml  service.yaml
apps/py-play/src/play/: auth.py  bbcsports.py  config.py  main.py  sryhma.py
apps/py-play/src/play/energy/: WaterMeter.py
apps/py-play/src/play/play/: bbcsports.py  html.py  sryhma.py
apps/py-play/src/play/templates/: index.html
apps/py-play/src/play/web/: bbcsports.py  html.py  sryhma.py
apps/py-play/tests/: test_main.py
apps/py-poll/: Dockerfile
apps/py-poller/: Dockerfile
apps/py-web/: Dockerfile  README.md  Taskfile.yaml  pyproject.toml
apps/py-web/helm-chart/: Chart.yaml  values.yaml
apps/py-web/helm-chart/templates/: deployment.yaml  ingress.yaml  service.yaml
apps/py-web/src/web/: main.py
apps/py-web/src/web/static/: yan.jpg.txt
apps/py-web/src/web/templates/: about_page.html  base.html  index.html
apps/py-web/src/web/templates/partials/: about_cv.html  contact.html  project_detail.html
apps/py-web/tests/: test_main.py
crates/rs-y-one/: Cargo.toml  README.md
docs/migrations/: ha_sqlite_mariadb.md
dyndns/: Dockerfile  entrypoint.sh  index.html
homeassistant/config/: configuration.yaml  home-assistant.log.1  home-assistant_v2.db  home-assistant_v2.db-shm  home-assistant_v2.db-wal  ip_bans.yaml
infra/: PROJECT.md  README.md  Taskfile.yaml  cronjob-ffmpeg.yaml
infra/bootstrap/: helm-values-argocd.yaml  helm-values-headlamp.yaml  k8s-cloudflare-cert-issuer.yaml  k8s-cloudflared-tunnel-deployment.yaml  k8s-headlamp-values.yaml  k8s-rbac-argocd-todo.md
infra/credentials/: env.md
infra/gitops-config/: apps.yaml
infra/helm-chart/: Chart.yaml  values-test.yaml  values.yaml
infrastructure/: ha_mariadb_guide.md  mariadb_guide.md  scripts.sh
infrastructure/bootstrap/: k8s-cloudflared-tunnel-deployment.yaml  k8s-headlamp-https-middleware.yaml  k8s-headlamp-values.yaml  k8s-rbac-todo.md
infrastructure/helm-chart/: values.yaml
playwright/: .dockerignore  bbcsports.py  dockerfile  html.py  main.py  marriott.py  shared.py  sryhma.py  viewlogs.py  water.py
playwright/energy/: Electricity.py  WaterMeter.py
playwright/play/: PlayPage.py  bbcsports.py  html.py  sryhma.py
playwright/templates/: minimal.html
playwright/utils/: EmailClient.py  SendGrid.py
poll/: Dockerfile  crontab  entrypoint.sh  helper_upload.py  index.html  job_backup.sh  job_cleaner.py  job_dyndns.sh  job_elenia.py  job_ffmpeg.sh  job_timelapse.py  manual_monthly.sh
services/playwright/: dockerfile
services/poll/: Dockerfile
(+66 files in other folders)
