[workspace]
resolver = "2"

members = ["apps/rs-*", "crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Yan Pan<yan@yan.fi>"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0" # error handling simplified