[project]
name = "yan-core"
version = "0.1.0"
requires-python = "==3.14.*"
authors = ["Yan Pan <yan@yan.fi>"]

[tool.uv.workspace]
members = ["apps/py-*", "packages/py-*"]

# global python test configurations
[dependency-groups]
dev = [
    "pytest"
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"

testpaths = [
    "apps",
    "packages"
]