[project]
name = "play"
version = "1.0.0"
description = "Play App with Playwright and FastAPI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "jinja2",
    "markdown",
    "opencv-python",
    "pandas",
    "plotly",
    "pytest-playwright",
    "pytz",
    "uvicorn"
]

[project.scripts]
play = "play.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"