[project]
name = "play"
version = "1.0.0"
description = "Play App with Playwright and FastAPI"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "fastapi[standard]",
    "jinja2",
    "markdown",
    "opencv-python-headless",
    "pandas",
    "plotly",
    "pydantic-settings",
    "pytest-playwright",
    "pytz",
    "uvicorn"
]

[project.scripts]
play = "play.main:main_dev"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/play"]